package br.edu.ifs.designpatterns.composite;

public abstract class Componente {
    public abstract double calcularPreco();
}